; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/spiffs/extr_spiffs_check.c_spiffs_rewrite_page.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/spiffs/extr_spiffs_check.c_spiffs_rewrite_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, %struct.TYPE_4__*, i32*)* @spiffs_rewrite_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spiffs_rewrite_page(i32* %0, i32 %1, %struct.TYPE_4__* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.TYPE_4__* %2, %struct.TYPE_4__** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @spiffs_page_allocate_data(i32* %10, i32 %13, %struct.TYPE_4__* %14, i32 0, i32 0, i32 0, i32 0, i32* %15)
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* %9, align 4
  %18 = call i32 @SPIFFS_CHECK_RES(i32 %17)
  %19 = load i32*, i32** %5, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = load i32, i32* %21, align 4
  %23 = call i64 @SPIFFS_PAGE_TO_PADDR(i32* %20, i32 %22)
  %24 = add i64 %23, 4
  %25 = load i32*, i32** %5, align 8
  %26 = load i32, i32* %6, align 4
  %27 = call i64 @SPIFFS_PAGE_TO_PADDR(i32* %25, i32 %26)
  %28 = add i64 %27, 4
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @SPIFFS_DATA_PAGE_SIZE(i32* %29)
  %31 = call i32 @spiffs_phys_cpy(i32* %19, i32 0, i64 %24, i64 %28, i32 %30)
  store i32 %31, i32* %9, align 4
  %32 = load i32, i32* %9, align 4
  %33 = call i32 @SPIFFS_CHECK_RES(i32 %32)
  %34 = load i32, i32* %9, align 4
  ret i32 %34
}

declare dso_local i32 @spiffs_page_allocate_data(i32*, i32, %struct.TYPE_4__*, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @SPIFFS_CHECK_RES(i32) #1

declare dso_local i32 @spiffs_phys_cpy(i32*, i32, i64, i64, i32) #1

declare dso_local i64 @SPIFFS_PAGE_TO_PADDR(i32*, i32) #1

declare dso_local i32 @SPIFFS_DATA_PAGE_SIZE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
